# personality-template

./: LICENSE  README.md  pyproject.toml
personality_template/: __init__.py  apply.py  catalog.py  luna-plugin.toml  presets.toml  routes.py  skills.py
personality_template/ui/: app.js  index.html  style.css
tests/: conftest.py  test_apply.py  test_catalog.py  test_manifest.py  test_persona_emoji_guard.py  test_skill.py
