[project]
name = "personality-template"
version = "0.3.0"
description = "A gallery of sci-fi AI personalities for Luna. Built on luna_sdk v0."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
